test/samples/invalid/deprecated_whitespace_natspec.warning.sol
contract Foo {
    /// foobar @custom:scribble #if_succeeds true;
    function foo() public {}
}
